centered fashionWidget and fixed overlapping CSS attributes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -112,13 +112,13 @@ color: #ffffff
   /* display: flex; */}
   
   
-  .FabWidgetplaceholder {
+  /* .FabWidgetplaceholder {
     display: flex;
     flex-wrap: wrap;
     align-content:stretch;
     max-width: 100%;
     max-height: 100%; 
-  }
+  } */
 
 .midpagebanner {
   text-align: center;
